Modify bus routes and add new coordinates
Updated bus routes and added new route coordinates and bus stop names.

--- a/buses.html
+++ b/buses.html
@@ -139,22 +139,46 @@
     let markers = [];
 
     const routes = [
-      {
-        from: 'Kengeri',
-        to: 'Yelahanka',
-        buses: ['401K', '401KB', '401M'],
-        routeCoordinates: [
-          [12.9236, 77.4987],
-          [12.9300, 77.5100],
-          [12.9400, 77.5200],
-          [12.9450, 77.5300],
-          [12.9539, 77.6309],
-          [12.9600, 77.5800],
-          [12.9700, 77.5600],
-          [13.0035, 77.5800],
-          [13.1035, 77.5762],
-        ],
-      },
+     {
+  from: 'Kengeri',
+  to: 'Yelahanka',
+  buses: ['401K', '401KB', '401M'],
+  routeCoordinates: [
+    [12.9322, 77.4843],  // Kengeri TTMC
+    [12.9308, 77.4822],  // Kengeri Railway Station
+    [12.9361, 77.4878],  // Kengeri Satellite Town
+    [12.9503, 77.4987],  // Shirke KHB Quarters
+    [12.9657, 77.5204],  // Nagarabhavi Circle
+    [12.9756, 77.5416],  // Vijayanagara
+    [12.9912, 77.5528],  // Rajajinagara Industrial Area
+    [12.9965, 77.5688],  // ESI Hospital Rajajinagara
+    [13.0233, 77.5558],  // Yeshwanthpura
+    [13.0351, 77.5665],  // MS Ramaiah College
+    [13.0462, 77.5505],  // BEL Circle
+    [13.0796, 77.5658],  // Vidyaranyapura
+    [13.1080, 77.5860],  // Atturu Layout
+    [13.0991, 77.5977],  // Yelahanka Sante Circle
+    [13.1004, 77.5967],  // Yelahanka Old Town
+  ],
+  busStopNames: [
+    "Kengeri TTMC",
+    "Kengeri Railway Station",
+    "Kengeri Satellite Town",
+    "Shirke KHB Quarters",
+    "Nagarabhavi Circle",
+    "Vijayanagara",
+    "Rajajinagara Industrial Area",
+    "ESI Hospital Rajajinagara",
+    "Yeshwanthpura",
+    "MS Ramaiah College",
+    "BEL Circle",
+    "Vidyaranyapura",
+    "Atturu Layout",
+    "Yelahanka Sante Circle",
+    "Yelahanka Old Town"
+  ]
+},
+
       {
   from: 'Koramangala',
   to: 'Electronic City',
@@ -291,4 +315,5 @@
   </script>
 </body>
 </html>
+
 
