Modify bus routes and stop details
Updated bus routes and coordinates in buses.html.

--- a/buses.html
+++ b/buses.html
@@ -142,7 +142,7 @@
      {
   from: 'Kengeri',
   to: 'Yelahanka',
-  buses: ['401K', '401KB', '401M'],
+  buses: ['401K', '401AF', '401MK'],
   routeCoordinates: [
     [12.9322, 77.4843],  // Kengeri TTMC
     [12.9308, 77.4822],  // Kengeri Railway Station
@@ -182,24 +182,122 @@
       {
   from: 'Koramangala',
   to: 'Electronic City',
-  buses: ['340E', '356C'],
-  routeCoordinates: [
-    [12.9352, 77.6245],
-    [12.9172, 77.6232],
-    [12.8904, 77.6090],
-    [12.8390, 77.6748]
+  buses: ['356CK', '356-CB'],
+    routeCoordinates: [
+    [12.935059,77.615593],   // Koramangala TTMC
+    [12.936959,77.617164],   // Koramangala Kalyana Mantapa
+    [12.936370,77.622289],   // Krupanidhi College Madivala
+    [12.925078,77.623489],   // Madiwala
+    [12.917073,77.627949],   // Central Silk Board
+    [12.910818,77.633473],   // Roopena Agrahar
+    [12.905657,77.638421],   // Bommanahalli
+    [12.900598,77.644485],   // Garvebhavi Palya
+    [12.897489,77.647981],   // Kudlu Gate
+    [12.889794,77.651195],   // Singasandra
+    [12.879888,77.654116],   // Hosa Road
+    [12.875918,77.659558],   // PES College
+    [12.867732,77.664590],   // Konappana Agrahara
+    [12.845660,77.662176],   // Electronic City
+    [12.843416,77.669482],   // Siemens
+    [12.842003,77.672176],   // Shikaripalya Cross
+    [12.838054,77.674643],   // Electronic City Wipro Gate
   ],
+  busStopNames: [
+    "Koramangala TTMC (Near Dominos Pizza)",
+    "Koramangala Kalyana Mantapa",
+    "Krupanidhi College Madivala",
+    "Madiwala",
+    "Central Silk Board (Opp Central Silk Board)",
+    "Roopena Agrahar",
+    "Bommanahalli",
+    "Garvebhavi Palya",
+    "Kudlu Gate",
+    "Singasandra",
+    "Hosa Road",
+    "PES College",
+    "Konappana Agrahara (In Front of Lavakusha Building)",
+    "Electronic City (Opposite of N.T.T.F. Institute)",
+    "Siemens",
+    "Shikaripalya Cross",
+    "Electronic City Wipro Gate"
+  ]
 },
 {
   from: 'Banashankari',
   to: 'Malleswaram',
-  buses: ['45E', '176', '96A'],
+  buses: [ '401-N'],
   routeCoordinates: [
-    [12.9222, 77.5757],
-    [12.9502, 77.5665],
-    [12.9900, 77.5690],
-    [13.0087, 77.5699]
+    [12.9186, 77.5732],     // Banashankari
+    [12.9224, 77.5735],     // Hunase Mara
+    [12.9241, 77.5755],     // Deepak Nursing Home
+    [12.9274, 77.5811],     // Yediyur
+    [12.9285, 77.5817],     // Jayanagar 6th Block
+    [12.9303, 77.5797],     // Nanda Talkies
+    [12.9306, 77.5832],     // South End Circle
+    [12.9325, 77.5841],     // Shanthi Talkies
+    [12.9341, 77.5848],     // Nagasandra Circle
+    [12.9362, 77.5876],     // Nettakalappa Circle
+    [12.9369, 77.5888],     // Basavanagudi Police Station
+    [12.9391, 77.5899],     // National College Basavanagudi
+    [12.9412, 77.5909],     // Gandhi Bazaar
+    [12.9430, 77.5920],     // Ramakrishna Ashram
+    [12.9448, 77.5941],     // Bangalore High School
+    [12.9466, 77.5954],     // Chamarajpet/Uma Talkies
+    [12.9485, 77.5967],     // KIMS Hospital/Makkalakoota
+    [12.9520, 77.5981],     // K R Market
+    [12.9542, 77.5988],     // Town Hall
+    [12.9559, 77.5999],     // Corporation
+    [12.9574, 77.6008],     // Kaveri Bhavan
+    [12.9598, 77.6015],     // K R Circle
+    [12.9620, 77.6027],     // Maharani S College
+    [12.9636, 77.6041],     // VidhanaSoudha
+    [12.9648, 77.6053],     // Telephone Exchange
+    [12.9672, 77.6069],     // Basaveshwara Circle/R C College
+    [12.9689, 77.6077],     // Race Course Road
+    [12.9710, 77.6101],     // Sivananda Stores
+    [12.9733, 77.6135],     // Swastik
+    [12.9748, 77.6149],     // Central Talkies Bus Stop
+    [12.9761, 77.6162],     // Sheshadripuram
+    [12.9778, 77.6178],     // Malleswaram Circle
+    [12.9800, 77.6195],     // Malleswaram 8th Cross
+    [12.9821, 77.6213],     // Malleswaram 11th Cross
   ],
+  busStopNames: [
+    "Banashankari",
+    "Hunase Mara (Banashankari)",
+    "Deepak Nursing Home",
+    "Yediyur",
+    "Jayanagar 6th Block",
+    "Nanda Talkies",
+    "South End Circle",
+    "Shanthi Talkies",
+    "Nagasandra Circle",
+    "Nettakalappa Circle",
+    "Basavanagudi Police Station",
+    "National College Basavanagudi",
+    "Gandhi Bazaar",
+    "Ramakrishna Ashram",
+    "Bangalore High School",
+    "Chamarajpet/Uma Talkies",
+    "KIMS Hospital/Makkalakoota",
+    "K R Market",
+    "Town Hall",
+    "Corporation",
+    "Kaveri Bhavan",
+    "K R Circle",
+    "Maharani S College",
+    "VidhanaSoudha",
+    "Telephone Exchange (Vidhana Soudha)",
+    "Basaveshwara Circle/R C College",
+    "Race Course Road",
+    "Sivananda Stores",
+    "Swastik",
+    "Central Talkies Bus Stop",
+    "Sheshadripuram",
+    "Malleswaram Circle",
+    "Malleswaram 8th Cross",
+    "Malleswaram 11th Cross"
+  ]
 },
 // ...add others as needed
     ];
@@ -315,5 +413,6 @@
   </script>
 </body>
 </html>
+
 
 
