--- a/buses.html
+++ b/buses.html
@@ -1,78 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bus Routes</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Leaflet Map CSS & JS (no key needed!) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <style>
-    #bus-list {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      margin: 25px 0;
-      gap: 18px;
-    }
-    .bus-btn,
-    #bus-list button {
-      background-color: #fff;
-      color: #4CAF50;
-      border: 2px solid #4CAF50;
-      box-shadow: 0 2px 12px rgba(76,175,80,0.10);
-      font-weight: bold;
-      font-size: 1.18em;
-      border-radius: 18px;
-      padding: 14px 24px;
-      margin: 0 8px;
-      transition: background 0.2s, color 0.2s, box-shadow 0.2s, transform 0.12s;
-      cursor: pointer;
-      position: relative;
-      overflow: hidden;
-    }
-    .bus-btn:hover,
-    #bus-list button:hover {
-      background-color: #4CAF50;
-      color: #fff;
-      box-shadow: 0 4px 20px rgba(76,175,80,0.18);
-      transform: scale(1.05);
-    }
-    .bus-btn:active,
-    #bus-list button:active {
-      transform: scale(0.97);
-    }
-    .bus-btn .ripple,
-    #bus-list button .ripple {
-      position: absolute;
-      border-radius: 50%;
-      background: rgba(255,255,255,0.45);
-      transform: scale(0);
-      animation: ripple-effect 0.6s linear;
-      pointer-events: none;
-    }
-    @keyframes ripple-effect {
-      to {
-        transform: scale(4);
-        opacity: 0;
-      }
-    }
-    #map {
-      width: 100%;
-      height: 400px;
-      margin-top: 30px;
-      border-radius: 8px;
-      display: none;
-    }
+    #map { width: 100%; height: 400px; margin-top: 30px; border-radius: 8px; display: none;}
     #route-stops {
       background: rgba(255,255,255,0.98);
       box-shadow: 0 3px 24px rgba(60,80,120,0.17);
       border-radius: 15px;
       padding: 22px 30px;
       margin: 24px auto 0 auto;
-      width: 92%;
+      width: 90%;
       max-width: 350px;
       color: #333;
       font-size: 1.07em;
@@ -102,26 +45,6 @@
       color: #fff;
       font-weight: bold;
     }
-    #search-again-btn {
-      margin-top: 12px;
-      padding: 8px 20px;
-      background: #4CAF50;
-      color: #fff;
-      border-radius: 12px;
-      font-size: 1em;
-      border: none;
-      cursor: pointer;
-      transition: background 0.18s, box-shadow 0.18s;
-    }
-    #search-again-btn:hover {
-      background: #219150;
-      box-shadow: 0 1px 7px #21915044;
-    }
-    @media (max-width: 750px) {
-      #route-stops { padding: 10px 7px; max-width: 98%; }
-      .bus-btn, #bus-list button { font-size: 1em; padding: 10px 14px;}
-      #map { height: 280px; }
-    }
   </style>
 </head>
 <body>
@@ -139,167 +62,172 @@
     let markers = [];
 
     const routes = [
-     {
-  from: 'Kengeri',
-  to: 'Yelahanka',
-  buses: ['401K', '401AF', '401MK'],
-  routeCoordinates: [
-    [12.9322, 77.4843],  // Kengeri TTMC
-    [12.9308, 77.4822],  // Kengeri Railway Station
-    [12.9361, 77.4878],  // Kengeri Satellite Town
-    [12.9503, 77.4987],  // Shirke KHB Quarters
-    [12.9657, 77.5204],  // Nagarabhavi Circle
-    [12.9756, 77.5416],  // Vijayanagara
-    [12.9912, 77.5528],  // Rajajinagara Industrial Area
-    [12.9965, 77.5688],  // ESI Hospital Rajajinagara
-    [13.0233, 77.5558],  // Yeshwanthpura
-    [13.0351, 77.5665],  // MS Ramaiah College
-    [13.0462, 77.5505],  // BEL Circle
-    [13.0796, 77.5658],  // Vidyaranyapura
-    [13.1080, 77.5860],  // Atturu Layout
-    [13.0991, 77.5977],  // Yelahanka Sante Circle
-    [13.1004, 77.5967],  // Yelahanka Old Town
-  ],
-  busStopNames: [
-    "Kengeri TTMC",
-    "Kengeri Railway Station",
-    "Kengeri Satellite Town",
-    "Shirke KHB Quarters",
-    "Nagarabhavi Circle",
-    "Vijayanagara",
-    "Rajajinagara Industrial Area",
-    "ESI Hospital Rajajinagara",
-    "Yeshwanthpura",
-    "MS Ramaiah College",
-    "BEL Circle",
-    "Vidyaranyapura",
-    "Atturu Layout",
-    "Yelahanka Sante Circle",
-    "Yelahanka Old Town"
-  ]
-},
-
+      // Kengeri <-> Yelahanka
       {
-  from: 'Koramangala',
-  to: 'Electronic City',
-  buses: ['356CK', '356-CB'],
-    routeCoordinates: [
-    [12.935059,77.615593],   // Koramangala TTMC
-    [12.936959,77.617164],   // Koramangala Kalyana Mantapa
-    [12.936370,77.622289],   // Krupanidhi College Madivala
-    [12.925078,77.623489],   // Madiwala
-    [12.917073,77.627949],   // Central Silk Board
-    [12.910818,77.633473],   // Roopena Agrahar
-    [12.905657,77.638421],   // Bommanahalli
-    [12.900598,77.644485],   // Garvebhavi Palya
-    [12.897489,77.647981],   // Kudlu Gate
-    [12.889794,77.651195],   // Singasandra
-    [12.879888,77.654116],   // Hosa Road
-    [12.875918,77.659558],   // PES College
-    [12.867732,77.664590],   // Konappana Agrahara
-    [12.845660,77.662176],   // Electronic City
-    [12.843416,77.669482],   // Siemens
-    [12.842003,77.672176],   // Shikaripalya Cross
-    [12.838054,77.674643],   // Electronic City Wipro Gate
-  ],
-  busStopNames: [
-    "Koramangala TTMC (Near Dominos Pizza)",
-    "Koramangala Kalyana Mantapa",
-    "Krupanidhi College Madivala",
-    "Madiwala",
-    "Central Silk Board (Opp Central Silk Board)",
-    "Roopena Agrahar",
-    "Bommanahalli",
-    "Garvebhavi Palya",
-    "Kudlu Gate",
-    "Singasandra",
-    "Hosa Road",
-    "PES College",
-    "Konappana Agrahara (In Front of Lavakusha Building)",
-    "Electronic City (Opposite of N.T.T.F. Institute)",
-    "Siemens",
-    "Shikaripalya Cross",
-    "Electronic City Wipro Gate"
-  ]
-},
-{
-  from: 'Banashankari',
-  to: 'Malleswaram',
-  buses: [ '401-N'],
-  routeCoordinates: [
-    [12.9186, 77.5732],     // Banashankari
-    [12.9224, 77.5735],     // Hunase Mara
-    [12.9241, 77.5755],     // Deepak Nursing Home
-    [12.9274, 77.5811],     // Yediyur
-    [12.9285, 77.5817],     // Jayanagar 6th Block
-    [12.9303, 77.5797],     // Nanda Talkies
-    [12.9306, 77.5832],     // South End Circle
-    [12.9325, 77.5841],     // Shanthi Talkies
-    [12.9341, 77.5848],     // Nagasandra Circle
-    [12.9362, 77.5876],     // Nettakalappa Circle
-    [12.9369, 77.5888],     // Basavanagudi Police Station
-    [12.9391, 77.5899],     // National College Basavanagudi
-    [12.9412, 77.5909],     // Gandhi Bazaar
-    [12.9430, 77.5920],     // Ramakrishna Ashram
-    [12.9448, 77.5941],     // Bangalore High School
-    [12.9466, 77.5954],     // Chamarajpet/Uma Talkies
-    [12.9485, 77.5967],     // KIMS Hospital/Makkalakoota
-    [12.9520, 77.5981],     // K R Market
-    [12.9542, 77.5988],     // Town Hall
-    [12.9559, 77.5999],     // Corporation
-    [12.9574, 77.6008],     // Kaveri Bhavan
-    [12.9598, 77.6015],     // K R Circle
-    [12.9620, 77.6027],     // Maharani S College
-    [12.9636, 77.6041],     // VidhanaSoudha
-    [12.9648, 77.6053],     // Telephone Exchange
-    [12.9672, 77.6069],     // Basaveshwara Circle/R C College
-    [12.9689, 77.6077],     // Race Course Road
-    [12.9710, 77.6101],     // Sivananda Stores
-    [12.9733, 77.6135],     // Swastik
-    [12.9748, 77.6149],     // Central Talkies Bus Stop
-    [12.9761, 77.6162],     // Sheshadripuram
-    [12.9778, 77.6178],     // Malleswaram Circle
-    [12.9800, 77.6195],     // Malleswaram 8th Cross
-    [12.9821, 77.6213],     // Malleswaram 11th Cross
-  ],
-  busStopNames: [
-    "Banashankari",
-    "Hunase Mara (Banashankari)",
-    "Deepak Nursing Home",
-    "Yediyur",
-    "Jayanagar 6th Block",
-    "Nanda Talkies",
-    "South End Circle",
-    "Shanthi Talkies",
-    "Nagasandra Circle",
-    "Nettakalappa Circle",
-    "Basavanagudi Police Station",
-    "National College Basavanagudi",
-    "Gandhi Bazaar",
-    "Ramakrishna Ashram",
-    "Bangalore High School",
-    "Chamarajpet/Uma Talkies",
-    "KIMS Hospital/Makkalakoota",
-    "K R Market",
-    "Town Hall",
-    "Corporation",
-    "Kaveri Bhavan",
-    "K R Circle",
-    "Maharani S College",
-    "VidhanaSoudha",
-    "Telephone Exchange (Vidhana Soudha)",
-    "Basaveshwara Circle/R C College",
-    "Race Course Road",
-    "Sivananda Stores",
-    "Swastik",
-    "Central Talkies Bus Stop",
-    "Sheshadripuram",
-    "Malleswaram Circle",
-    "Malleswaram 8th Cross",
-    "Malleswaram 11th Cross"
-  ]
-},
-// ...add others as needed
+        from: 'Kengeri',
+        to: 'Yelahanka',
+        buses: ['401K', '401AF', '401MK'],
+        routeCoordinates: [
+          [12.9322, 77.4843],  // Kengeri TTMC
+          [12.9308, 77.4822],  // Kengeri Railway Station
+          [12.9361, 77.4878],  // Kengeri Satellite Town
+          [12.9503, 77.4987],  // Shirke KHB Quarters
+          [12.9657, 77.5204],  // Nagarabhavi Circle
+          [12.9756, 77.5416],  // Vijayanagara
+          [12.9912, 77.5528],  // Rajajinagara Industrial Area
+          [12.9965, 77.5688],  // ESI Hospital Rajajinagara
+          [13.0233, 77.5558],  // Yeshwanthpura
+          [13.0351, 77.5665],  // MS Ramaiah College
+          [13.0462, 77.5505],  // BEL Circle
+          [13.0796, 77.5658],  // Vidyaranyapura
+          [13.1080, 77.5860],  // Atturu Layout
+          [13.0991, 77.5977],  // Yelahanka Sante Circle
+          [13.1004, 77.5967],  // Yelahanka Old Town
+        ],
+        busStopNames: [
+          "Kengeri TTMC",
+          "Kengeri Railway Station",
+          "Kengeri Satellite Town",
+          "Shirke KHB Quarters",
+          "Nagarabhavi Circle",
+          "Vijayanagara",
+          "Rajajinagara Industrial Area",
+          "ESI Hospital Rajajinagara",
+          "Yeshwanthpura",
+          "MS Ramaiah College",
+          "BEL Circle",
+          "Vidyaranyapura",
+          "Atturu Layout",
+          "Yelahanka Sante Circle",
+          "Yelahanka Old Town"
+        ]
+      },
+
+      // Koramangala <-> Electronic City
+      {
+        from: 'Koramangala',
+        to: 'Electronic City',
+        buses: ['340E', '356C'],
+        routeCoordinates: [
+          [12.935059,77.615593],   // Koramangala TTMC
+          [12.936959,77.617164],   // Koramangala Kalyana Mantapa
+          [12.936370,77.622289],   // Krupanidhi College Madivala
+          [12.925078,77.623489],   // Madiwala
+          [12.917073,77.627949],   // Central Silk Board
+          [12.910818,77.633473],   // Roopena Agrahar
+          [12.905657,77.638421],   // Bommanahalli
+          [12.900598,77.644485],   // Garvebhavi Palya
+          [12.897489,77.647981],   // Kudlu Gate
+          [12.889794,77.651195],   // Singasandra
+          [12.879888,77.654116],   // Hosa Road
+          [12.875918,77.659558],   // PES College
+          [12.867732,77.664590],   // Konappana Agrahara
+          [12.845660,77.662176],   // Electronic City
+          [12.843416,77.669482],   // Siemens
+          [12.842003,77.672176],   // Shikaripalya Cross
+          [12.838054,77.674643],   // Electronic City Wipro Gate
+        ],
+        busStopNames: [
+          "Koramangala TTMC (Near Dominos Pizza)",
+          "Koramangala Kalyana Mantapa",
+          "Krupanidhi College Madivala",
+          "Madiwala",
+          "Central Silk Board (Opp Central Silk Board)",
+          "Roopena Agrahar",
+          "Bommanahalli",
+          "Garvebhavi Palya",
+          "Kudlu Gate",
+          "Singasandra",
+          "Hosa Road",
+          "PES College",
+          "Konappana Agrahara (In Front of Lavakusha Building)",
+          "Electronic City (Opposite of N.T.T.F. Institute)",
+          "Siemens",
+          "Shikaripalya Cross",
+          "Electronic City Wipro Gate"
+        ]
+      },
+
+      // Banashankari <-> Malleswaram
+      {
+        from: 'Banashankari',
+        to: 'Malleswaram',
+        buses: ['45E', '176', '96A'],
+        routeCoordinates: [
+          [12.9186, 77.5732],     // Banashankari
+          [12.9224, 77.5735],     // Hunase Mara
+          [12.9241, 77.5755],     // Deepak Nursing Home
+          [12.9274, 77.5811],     // Yediyur
+          [12.9285, 77.5817],     // Jayanagar 6th Block
+          [12.9303, 77.5797],     // Nanda Talkies
+          [12.9306, 77.5832],     // South End Circle
+          [12.9325, 77.5841],     // Shanthi Talkies
+          [12.9341, 77.5848],     // Nagasandra Circle
+          [12.9362, 77.5876],     // Nettakalappa Circle
+          [12.9369, 77.5888],     // Basavanagudi Police Station
+          [12.9391, 77.5899],     // National College Basavanagudi
+          [12.9412, 77.5909],     // Gandhi Bazaar
+          [12.9430, 77.5920],     // Ramakrishna Ashram
+          [12.9448, 77.5941],     // Bangalore High School
+          [12.9466, 77.5954],     // Chamarajpet/Uma Talkies
+          [12.9485, 77.5967],     // KIMS Hospital/Makkalakoota
+          [12.9520, 77.5981],     // K R Market
+          [12.9542, 77.5988],     // Town Hall
+          [12.9559, 77.5999],     // Corporation
+          [12.9574, 77.6008],     // Kaveri Bhavan
+          [12.9598, 77.6015],     // K R Circle
+          [12.9620, 77.6027],     // Maharani S College
+          [12.9636, 77.6041],     // VidhanaSoudha
+          [12.9648, 77.6053],     // Telephone Exchange
+          [12.9672, 77.6069],     // Basaveshwara Circle/R C College
+          [12.9689, 77.6077],     // Race Course Road
+          [12.9710, 77.6101],     // Sivananda Stores
+          [12.9733, 77.6135],     // Swastik
+          [12.9748, 77.6149],     // Central Talkies Bus Stop
+          [12.9761, 77.6162],     // Sheshadripuram
+          [12.9778, 77.6178],     // Malleswaram Circle
+          [12.9800, 77.6195],     // Malleswaram 8th Cross
+          [12.9821, 77.6213],     // Malleswaram 11th Cross
+        ],
+        busStopNames: [
+          "Banashankari",
+          "Hunase Mara (Banashankari)",
+          "Deepak Nursing Home",
+          "Yediyur",
+          "Jayanagar 6th Block",
+          "Nanda Talkies",
+          "South End Circle",
+          "Shanthi Talkies",
+          "Nagasandra Circle",
+          "Nettakalappa Circle",
+          "Basavanagudi Police Station",
+          "National College Basavanagudi",
+          "Gandhi Bazaar",
+          "Ramakrishna Ashram",
+          "Bangalore High School",
+          "Chamarajpet/Uma Talkies",
+          "KIMS Hospital/Makkalakoota",
+          "K R Market",
+          "Town Hall",
+          "Corporation",
+          "Kaveri Bhavan",
+          "K R Circle",
+          "Maharani S College",
+          "VidhanaSoudha",
+          "Telephone Exchange (Vidhana Soudha)",
+          "Basaveshwara Circle/R C College",
+          "Race Course Road",
+          "Sivananda Stores",
+          "Swastik",
+          "Central Talkies Bus Stop",
+          "Sheshadripuram",
+          "Malleswaram Circle",
+          "Malleswaram 8th Cross",
+          "Malleswaram 11th Cross"
+        ]
+      },
+
+      // Add more routes as needed
     ];
 
     function getQueryParams() {
@@ -328,25 +256,13 @@
 
       routeInfo.textContent = `${fromLocation} to ${toLocation} - Bus Routes:`;
       busList.innerHTML = "";
-
-      // Centered, animated bus number buttons
       route.buses.forEach(bus => {
         const button = document.createElement('button');
         button.textContent = bus;
         button.className = 'bus-btn';
         button.style.position = 'relative';
-        button.addEventListener('click', function(e) {
-          const ripple = document.createElement('span');
-          ripple.className = 'ripple';
-          const rect = button.getBoundingClientRect();
-          ripple.style.left = (e.clientX - rect.left) + 'px';
-          ripple.style.top = (e.clientY - rect.top) + 'px';
-          ripple.style.width = ripple.style.height = Math.max(rect.width, rect.height) + 'px';
-          button.appendChild(ripple);
-          setTimeout(() => ripple.remove(), 600);
-        });
         button.onclick = function () {
-          showRouteOnMap(route.routeCoordinates);
+          showRouteOnMap(route.routeCoordinates, route);
         };
         busList.appendChild(button);
       });
@@ -356,16 +272,13 @@
       };
     }
 
-    function showRouteOnMap(coordinates) {
-      // Show the map
+    // Updated to show stop names if present:
+    function showRouteOnMap(coordinates, route) {
       document.getElementById('map').style.display = "block";
 
-      // If map doesn't exist, create and center it on first point
       if (!map) {
         map = L.map('map').setView(coordinates[0], 12);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          maxZoom: 19,
-        }).addTo(map);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {maxZoom: 19}).addTo(map);
       } else {
         map.setView(coordinates[0], 12);
         routeLine && map.removeLayer(routeLine);
@@ -373,32 +286,37 @@
         markers = [];
       }
 
-      // Draw route polyline
-      routeLine = L.polyline(coordinates, {
-        color: "#4CAF50",
-        weight: 4,
-        opacity: 0.9,
-      }).addTo(map);
+      routeLine = L.polyline(coordinates, {color: "#4CAF50", weight: 4, opacity: 0.9}).addTo(map);
 
-      // Add markers for stops
       markers = coordinates.map((coord, idx) => {
         let marker = L.marker(coord)
-          .bindPopup(`Stop ${idx+1}: [${coord[0].toFixed(4)}, ${coord[1].toFixed(4)}]`)
+          .bindPopup(
+            route.busStopNames
+              ? `${route.busStopNames[idx]}`
+              : `Stop ${idx+1}: [${coord[0].toFixed(4)}, ${coord[1].toFixed(4)}]`
+          )
           .addTo(map);
         return marker;
       });
 
-      // Interactive stops CARD
+      // Route stops show names if present
       const stopsDiv = document.getElementById("route-stops");
       stopsDiv.style.display = "block";
       stopsDiv.innerHTML = `<h3>Route Stops:</h3>` +
-        coordinates.map((coord, idx) =>
-          `<div class="stop-interactive" data-stop="${idx}">
-            Stop ${idx + 1}: [${coord[0].toFixed(4)}, ${coord[1].toFixed(4)}]
-          </div>`
-        ).join("");
+        (route.busStopNames ?
+          route.busStopNames.map((name, idx) =>
+            `<div class="stop-interactive" data-stop="${idx}">
+              Stop ${idx + 1}: ${name}
+            </div>`
+          ).join("")
+        :
+          coordinates.map((coord, idx) =>
+            `<div class="stop-interactive" data-stop="${idx}">
+              Stop ${idx + 1}: [${coord[0].toFixed(4)}, ${coord[1].toFixed(4)}]
+            </div>`
+          ).join("")
+        );
 
-      // Add click for each stop: highlight, center, open popup
       document.querySelectorAll('.stop-interactive').forEach((elem, idx) => {
         elem.onclick = function() {
           document.querySelectorAll('.stop-interactive').forEach(e => e.classList.remove('active'));
@@ -413,6 +331,3 @@
   </script>
 </body>
 </html>
-
-
-
