--- a/buses.html
+++ b/buses.html
@@ -4,57 +4,130 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bus Routes</title>
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <style>
-    #map { width: 100%; height: 400px; margin-top: 30px; border-radius: 8px; display: none;}
-    #route-stops {
-      background: rgba(255,255,255,0.98);
-      box-shadow: 0 3px 24px rgba(60,80,120,0.17);
+    body {
+      font-family: Arial, sans-serif;
+      background: #f3f8f6;
+      margin: 0;
+      padding: 0;
+      color: #184c28;
+    }
+    h1#route-info {
+      font-family: inherit;
+      font-size: 2.2em;
+      font-weight: bold;
+      letter-spacing: 1px;
+      margin: 27px 0 16px 0;
+      text-align: center;
+      color: #095c35;
+    }
+    #bus-list {
+      display: flex;
+      gap: 19px;
+      justify-content: center;
+      margin-bottom: 14px;
+    }
+    .bus-btn {
+      background: linear-gradient(90deg, #40c686aa 0%, #d6f9e6bb 100%);
+      border: none;
       border-radius: 15px;
+      font-size: 1.05em;
+      color: #096b46;
+      padding: 10px 23px;
+      font-family: inherit;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      box-shadow: 0 2px 7px #16b3671d;
+      cursor: pointer;
+      transition: background 0.14s, color 0.18s, transform 0.10s;
+    }
+    .bus-btn:hover {
+      background: #219150;
+      color: #fff;
+      transform: scale(1.05);
+    }
+    #search-again-btn {
+      display: block;
+      margin: 20px auto 0 auto;
+      background: #43cd7b;
+      color: #fff;
+      border: none;
+      border-radius: 11px;
+      font-size: 1em;
+      font-family: inherit;
+      font-weight: bold;
+      padding: 9px 28px;
+      box-shadow: 0 1px 4px #43cd7b23;
+      cursor: pointer;
+      transition: background 0.17s;
+    }
+    #search-again-btn:hover {
+      background: #219150;
+    }
+    #map {
+      width: 94vw;
+      max-width: 1200px;
+      height: 400px;
+      margin: 30px auto 0 auto;
+      display: none;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px #21915027;
+    }
+    #route-stops {
+      background: #fff;
+      box-shadow: 0 4px 24px rgba(60,80,120,0.11);
+      border-radius: 18px;
       padding: 22px 30px;
-      margin: 24px auto 0 auto;
-      width: 90%;
-      max-width: 350px;
-      color: #333;
-      font-size: 1.07em;
-      outline: 2px solid #eee;
+      margin: 18px auto 0 auto;
+      width: 92%;
+      max-width: 410px;
+      color: #184c28;
+      font-size: 1.11em;
+      outline: 2px solid #d9eee3;
       transition: box-shadow 0.22s;
     }
     #route-stops h3 {
       margin-bottom: 12px;
-      color: #219150;
+      color: #26a857;
+      font-weight: bold;
       font-size: 1.13em;
       letter-spacing: 1px;
     }
     .stop-interactive {
-  font-family: 'Segoe UI', 'Arial', sans-serif;  /* Modern and readable */
-  font-size: 1.08em;
-  color: #184c28;
-  background: #f7fff7;
-  padding: 8px 18px;
-  margin-bottom: 5px;
-  border-radius: 10px;
-  border: 1px solid #e3eee3;
-  box-shadow: 0 1px 3px #21915009;
-  cursor: pointer;
-  transition: background 0.14s, color 0.14s, font-weight 0.18s;
-}
-
-.stop-interactive:hover {
-  background: #c4ecc7;
-  color: #206a39;
-  font-weight: bold;
-}
-
-.stop-interactive.active {
-  background: #43cd7b;
-  color: #fff;
-  font-weight: bold;
-  border: 1px solid #43cd7b;
-}
-
+      font-family: 'Segoe UI', 'Arial', sans-serif;
+      font-size: 1.1em;
+      color: #184c28;
+      background: #f7fff7;
+      padding: 9px 18px;
+      margin-bottom: 6px;
+      border-radius: 10px;
+      border: 1px solid #e3eee3;
+      box-shadow: 0 1px 3px #21915009;
+      cursor: pointer;
+      transition: background 0.14s, color 0.14s, font-weight 0.18s;
+      text-align: left;
+      font-weight: 500;
+    }
+    .stop-interactive:hover {
+      background: #c4ecc7;
+      color: #206a39;
+      font-weight: bold;
+    }
+    .stop-interactive.active {
+      background: #43cd7b;
+      color: #fff;
+      font-weight: bold;
+      border: 1px solid #43cd7b;
+    }
+    @media (max-width: 750px) {
+      #map { height: 280px; }
+      #route-stops { padding: 10px 7px; max-width: 98vw; }
+      h1#route-info { font-size: 1.35em; }
+      #bus-list { flex-direction: column; gap: 12px; align-items: center; }
+      .bus-btn, #search-again-btn { font-size: 0.97em; }
+    }
   </style>
 </head>
 <body>
@@ -341,4 +414,5 @@
   </script>
 </body>
 </html>
+
 
